[tool.poetry]
name = "producer"
version = "0.1.0"
description = ""
authors = ["nicholas.zhaoyu <nicholas.zhaoyu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
